--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -3,45 +3,46 @@
         <div class="column-contact">
             <h1 data-aos="flip-right" data-aos-duration="800">CONTACT</h1><br>
             <span>Get in touch to work together?</span>
-        </div>        
+        </div>   
+        
+        
+
         <form #form action="https://valentinakuxhausen.com/send_mail.php" 
         method="POST" 
         class="column-contact">
 
-            <div class="input-width">
+
+            <div class="h-input">
                 <h4>Name</h4>
                 <input 
                 data-aos="fade-right" data-aos-duration="800"
-                class="input-width"
                 name="name" 
                 required 
-                class="input contact-fields" 
+                class="input" 
                 placeholder="Enter your Name" 
                 type="text">
             </div>
 
-            <div class="input-width">
+            <div class="h-input">
                 <h4>E-Mail</h4>
                 <input 
                 data-aos="fade-right" data-aos-duration="800"
-                class="input-width"
                 name="email" 
                 required 
-                class="input contact-fields" 
+                class="input" 
                 placeholder="Enter your E-Mail Address" 
                 type="email">
             </div>
 
-            <div class="input-width">
+            <div class="h-input">
                 <h4>Message</h4>
                 <textarea
                 data-aos="fade-right" data-aos-duration="800"
-                class="input-width"
                 name="message" 
                 required
-                class="input contact-fields" 
+                class="input input-message" 
                 placeholder="Your message"
-                rows="10"
+                rows="7"
                 ></textarea>
                 </div>
 
