--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -4,68 +4,60 @@
 }
 
 
-// @media (max-width: 1500px) {
-//     body {
-//         height: 100%;
-//     }
-// }
 
-// @media (max-width: 1045px) {
-//         body {
-//         height: 100%;
-//     }
-
-// }
-
-// @media (max-width: 850px) and (min-height: 600px) {
-//         body {
-//         height: 100%;
-//     }
-
-// }
-
-// @media (max-width: 850px) {
-//         body {
-//         height: 100%;
-//     }
-
-// }
+@media (max-width: 1500px) {
+    body {
+        height: 100%;
+    }
+}
 
 
-// @media (max-width: 1240px) and (orientation : landscape) {
-//         body {
-//         height: 100%;
-//     }
 
-// }
+@media (max-width: 1045px) {
+        body {
+        height: 100%;
+    }
+}
 
-// @media (max-width: 480px) and (max-height: 480px) {
-//         body {
-//         height: 100%;
-//     }
+@media (max-width: 850px) and (min-height: 600px) {
+        body {
+        height: 100%;
+    }
+}
 
-// }
+@media (max-width: 850px) {
+        body {
+        height: 100%;
+    }
+}
 
-// @media (max-width: 480px) and (min-height: 1000px) {
-//         body {
-//         height: 100%;
-//     }
+@media (max-width: 1240px) and (orientation : landscape) {
+        body {
+        height: 100%;
+    }
+}
 
-// }
+@media (max-width: 480px) and (max-height: 480px) {
+        body {
+        height: 100%;
+    }
+}
 
-// @media (max-width: 320px) {
-//         body {
-//         height: 100%;
-//     }
+@media (max-width: 480px) and (min-height: 1000px) {
+        body {
+        height: 100%;
+    }
+}
 
-// }
+@media (max-width: 320px) {
+        body {
+        height: 100%;
+    }
+}
 
-// @media (max-width: 480px) and (orientation : landscape) {
-//         body {
-//         height: 100%;
-//     }
+@media (max-width: 480px) and (orientation : landscape) {
+        body {
+        height: 100%;
+    }
+}
 
-
-// }
-
-// TODO: @media
