--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -68,25 +68,43 @@
     background-color: white;
     margin-top: -30px;
     margin-bottom: 15px;
-
 }
+
+
 
 @media (max-width: 1500px) {
     .my-skills-div {
         width: 100%;
         right: 0;
         left: 0;
-
     }
-    
+
     .bottom-div-div {
         width: 945px;
     }
-    
+
     .skill-element-div {
         min-width: 270px;
     }
 }
+
+@media (max-width: 367px) {
+    .div-distance {
+        padding-top: 70px;
+    }
+
+}
+
+@media (maxwidth: 415px) {
+    .div-distance {
+        padding-top: 110px;
+    }
+}
+
+@media (max-width: 821px) {
+}
+
+
 
 @media (max-width: 1040px) {
     .bottom-div-div {
@@ -95,12 +113,12 @@
 
 }
 
-@media (max-width: 850px) {
-    .bottom-div-div {
-        width: 400px;
-    }
+// @media (max-width: 850px) {
+//     .bottom-div-div {
+//         width: 400px;
+//     }
 
-}
+// }
 
 @media (max-width: 480px) {
     .my-skills-h {
